# weather-forecast

./: .gitignore  CMakeLists.txt  README.md  TASK.md  install.sh  install_windows.sh  runCMake.bat  runCMake.sh
.config/: default_config.json
.github/workflows/: ci_tests.yml
docs/: README.md  WeatherForecast.md
docs/dev/: architecture.md  problem.md  requirements.md
lib/: CMakeLists.txt
lib/argparser/: CMakeLists.txt
lib/argparser/basic/: BasicFunctions.hpp  CMakeLists.txt  ConditionalOutput.hpp
lib/argparser/docs/dev/: architecture.md  requirements.md
lib/cpr/: CMakeLists.txt
lib/forecast/: CMakeLists.txt  Forecaster.cpp  Forecaster.hpp  Geocoder.cpp  Geocoder.hpp  JsonCache.cpp  JsonCache.hpp  WeatherDay.cpp  WeatherDay.hpp  WeatherTimeUnit.cpp  WeatherTimeUnit.hpp
lib/ftxui/: CMakeLists.txt  ftxui_interface.cpp  ftxui_interface.hpp
lib/json/: CMakeLists.txt
lib/ui/: CMakeLists.txt  ConfigParser.cpp  ConfigParser.hpp  TextUserInterface.cpp  TextUserInterface.hpp  TuiWorker.cpp  TuiWorker.hpp  ui_functions.cpp  ui_functions.hpp
lib/utils/: CMakeLists.txt  utils.cpp  utils.hpp
lib/weather/: CMakeLists.txt  WeatherDay.cpp  WeatherDay.hpp  WeatherTimeUnit.hpp
tests/: ArgParserUnitTestSuite.hpp  CMakeLists.txt  ForecastUnitTestSuite.cpp  ForecastUnitTestSuite.hpp  WeatherForecastIntegrationTestSuite.cpp  WeatherForecastIntegrationTestSuite.hpp  argparser_unit_tests.cpp  forecast_unit_tests.cpp  main_test.cpp  test_functions.cpp
